--- a/index.html
+++ b/index.html
@@ -1,23 +1,72 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page 2023</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
-    <section class="main-bg section">
-        <div class="main-content">
-            <h1>Lorem</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat labore quis voluptatum quisquam, sint deserunt ut non nam, aperiam explicabo distinctio reiciendis totam facere obcaecati quibusdam optio delectus numquam similique.</p>
+
+<body class="main-bg">
+    <aside class="menu white-bg">
+        <div class="main-content menu-content">
+            <h1>
+                <a href="">logo</a>
+            </h1>
+            <nav>
+                <ul>
+                    <li><a href="#intro">intro</a></li>
+                    <li><a href="#top3">top 3</a></li>
+                    <li><a href="#">gallery</a></li>
+                    <li><a href="#">work</a></li>
+                    <li><a href="#">contatct</a></li>
+                </ul>
+            </nav>
+        </div>
+    </aside>
+
+    <div id="intro"  class="menu-spacing"></div>
+
+    <section class="intro section main-bg">
+        <div class="main-content intro-content">
+            <div class="intro-text-content">
+                <h2>January brings us Firefox 85</h2>
+                <p>
+                    To wrap up January, we are proud to bring you the release of Firefox 85. In this version we are
+                    bringing
+                    you
+                    support for the :focus-visible pseudo-class in CSS and associated devtools, and the complete removal
+                    of
+                    Flash
+                    support from Firefox.
+                </p>
+            </div>
+            <div class="intro-img">
+                <img src="assets/img/js_img.svg"
+                    alt="homem segurando logo do css mulher segurando logo do js e homem segurando logo do html ">
+            </div>
         </div>
     </section>
-    <section class="white-bg section">
-        <div class="main-content">
-            <h1>Lorem</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat labore quis voluptatum quisquam, sint deserunt ut non nam, aperiam explicabo distinctio reiciendis totam facere obcaecati quibusdam optio delectus numquam similique.</p>
+    <section id="top3" class="section white-bg">
+        <div class="main-content top3-content">
+            <h2>top 3 jobs</h2>
+            <p>
+                The release of Apple Silicon-based Macs at the end of last year generated a flurry of news coverage and
+                some surprises at the machine’s performance. This post details some background information on the
+                experience of porting Firefox to run natively on these CPUs.
+            </p>
+            <p>
+                We’ll start with some background on the Mac transition and give an overview of Firefox internals that
+                needed to know about the new architecture, before moving on to the concept of Universal Binaries.
+            </p>
+            <p>
+                We’ll then explain how DRM/EME works on the new platform, talk about our experience with macOS Big Sur,
+                and discuss various updater problems we had to deal with. We’ll conclude with the release and an
+                overview of various other improvements that are in the pipeline.
+            </p>
         </div>
     </section>
 </body>
+
 </html>
