session grid completed

--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
     <aside class="menu white-bg">
         <div class="main-content menu-content">
             <h1>
-                <a href="">logo</a>
+                <a href="#intro">logo</a>
             </h1>
             <nav>
                 <ul>
                     <li><a href="#intro">intro</a></li>
                     <li><a href="#top3">top 3</a></li>
-                    <li><a href="#">gallery</a></li>
-                    <li><a href="#">work</a></li>
+                    <li><a href="#grid-one">grid</a></li>
+                    <li><a href="#gallery">gallery</a></li>
                     <li><a href="#">contatct</a></li>
                 </ul>
             </nav>
         </div>
     </aside>
 
-    <div id="intro"  class="menu-spacing"></div>
+    <div id="intro" class="menu-spacing"></div>
 
     <section class="intro section main-bg">
         <div class="main-content intro-content">
@@ -66,6 +66,47 @@
                 overview of various other improvements that are in the pipeline.
             </p>
         </div>
+    </section>
+
+    <section id="grid-one" class="grid-one main-bg section">
+        <div class="main-content grid-one-content">
+            <h2 class="grid-main-heading">My Grid</h2>
+            <p class="grid-description">Uma breve descrição.</p>
+            <div class="grid">
+                <article>
+                    <h3>Teste 1</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, excepturi, hic praesentium
+                    aliquid odio tempora, quaerat dignissimos cupiditate iste molestias nesciunt? Accusantium temporibus
+                    provident possimus? Itaque deleniti ipsam possimus hic.
+                </p>
+            </article>
+            <article>
+                <h3>teste 2</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, excepturi, hic praesentium
+                    aliquid odio tempora, quaerat dignissimos cupiditate iste molestias nesciunt? Accusantium temporibus
+                    provident possimus? Itaque deleniti ipsam possimus hic.
+                </p>
+            </article>
+            <article>
+                <h3>teste 3</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, excepturi, hic praesentium
+                    aliquid odio tempora, quaerat dignissimos cupiditate iste molestias nesciunt? Accusantium temporibus
+                    provident possimus? Itaque deleniti ipsam possimus hic.
+                </p>
+            </article>
+            </div>
+        </div>
+    </section>
+
+    <section id="gallery" class="section white-bg">
+        <div class="main-content">
+            <h1>teste</h1>
+
+        </div>
+
     </section>
 </body>
 
