--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body class="main-bg">
+<body>
     <aside class="menu white-bg">
         <div class="main-content menu-content">
             <h1>
@@ -20,7 +20,9 @@
                     <li><a href="#top3">top 3</a></li>
                     <li><a href="#grid-one">grid</a></li>
                     <li><a href="#gallery">gallery</a></li>
-                    <li><a href="#">contatct</a></li>
+                    <li><a href="#grid-two">grid 2</a></li>
+                    <li><a href="#pricing">pricing</a></li>
+                    <li><a href="#contact">contatct</a></li>
                 </ul>
             </nav>
         </div>
@@ -75,39 +77,186 @@
             <div class="grid">
                 <article>
                     <h3>Teste 1</h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, excepturi, hic praesentium
-                    aliquid odio tempora, quaerat dignissimos cupiditate iste molestias nesciunt? Accusantium temporibus
-                    provident possimus? Itaque deleniti ipsam possimus hic.
-                </p>
-            </article>
-            <article>
-                <h3>teste 2</h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, excepturi, hic praesentium
-                    aliquid odio tempora, quaerat dignissimos cupiditate iste molestias nesciunt? Accusantium temporibus
-                    provident possimus? Itaque deleniti ipsam possimus hic.
-                </p>
-            </article>
-            <article>
-                <h3>teste 3</h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, excepturi, hic praesentium
-                    aliquid odio tempora, quaerat dignissimos cupiditate iste molestias nesciunt? Accusantium temporibus
-                    provident possimus? Itaque deleniti ipsam possimus hic.
-                </p>
-            </article>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, excepturi, hic praesentium
+                        aliquid odio tempora, quaerat dignissimos cupiditate iste molestias nesciunt? Accusantium
+                        temporibus
+                        provident possimus? Itaque deleniti ipsam possimus hic.
+                    </p>
+                </article>
+                <article>
+                    <h3>teste 2</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, excepturi, hic praesentium
+                        aliquid odio tempora, quaerat dignissimos cupiditate iste molestias nesciunt? Accusantium
+                        temporibus
+                        provident possimus? Itaque deleniti ipsam possimus hic.
+                    </p>
+                </article>
+                <article>
+                    <h3>teste 3</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, excepturi, hic praesentium
+                        aliquid odio tempora, quaerat dignissimos cupiditate iste molestias nesciunt? Accusantium
+                        temporibus
+                        provident possimus? Itaque deleniti ipsam possimus hic.
+                    </p>
+                </article>
             </div>
         </div>
     </section>
 
-    <section id="gallery" class="section white-bg">
-        <div class="main-content">
-            <h1>teste</h1>
-
+    <section id="gallery" class="grid-one section white-bg">
+        <div class="main-content grid-one-content">
+            <h2 class="grid-main-heading">Gallery</h2>
+            <p class="grid-description">Uma breve descrição.</p>
+            <div class="grid">
+                <div class="gallery-img">
+                    <img src="https://source.unsplash.com/random/360x360?r=1" alt="ramdom image unsplash">
+                </div>
+                <div class="gallery-img">
+                    <img src="https://source.unsplash.com/random/360x360?r=2" alt="ramdom image unsplash">
+                </div>
+                <div class="gallery-img">
+                    <img src="https://source.unsplash.com/random/360x360?r=3" alt="ramdom image unsplash">
+                </div>
+                <div class="gallery-img">
+                    <img src="https://source.unsplash.com/random/360x360?r=4" alt="ramdom image unsplash">
+                </div>
+                <div class="gallery-img">
+                    <img src="https://source.unsplash.com/random/360x360?r=5" alt="ramdom image unsplash">
+                </div>
+                <div class="gallery-img">
+                    <img src="https://source.unsplash.com/random/360x360?r=6" alt="ramdom image unsplash">
+                </div>
+            </div>
         </div>
-
     </section>
+
+    <section id="grid-two" class="grid-one main-bg section">
+        <div class="main-content grid-one-content">
+            <h2 class="grid-main-heading">My Grid 2</h2>
+            <p class="grid-description">Uma breve descrição.</p>
+            <div class="grid">
+                <article>
+                    <h3>Teste 1</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, excepturi, hic praesentium
+                        aliquid odio tempora, quaerat dignissimos cupiditate iste molestias nesciunt? Accusantium
+                        temporibus
+                        provident possimus? Itaque deleniti ipsam possimus hic.
+                    </p>
+                </article>
+                <article>
+                    <h3>teste 2</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, excepturi, hic praesentium
+                        aliquid odio tempora, quaerat dignissimos cupiditate iste molestias nesciunt? Accusantium
+                        temporibus
+                        provident possimus? Itaque deleniti ipsam possimus hic.
+                    </p>
+                </article>
+                <article>
+                    <h3>teste 3</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, excepturi, hic praesentium
+                        aliquid odio tempora, quaerat dignissimos cupiditate iste molestias nesciunt? Accusantium
+                        temporibus
+                        provident possimus? Itaque deleniti ipsam possimus hic.
+                    </p>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section id="pricing" class="section white-bg">
+        <div class="main-content top3-content">
+            <h2>Pricing</h2>
+            <p>
+                The release of Apple Silicon-based Macs at the end of last year generated a flurry of news coverage and
+            </p>
+            
+            <div class="responsive-table">
+                <table>
+                    <caption>Pricing table</caption>
+                    <thead>
+                        <tr>
+                            <th>Title 1</th>
+                            <th>Title 2</th>
+                            <th>Title 3</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Content 1</td>
+                            <td>Content 2</td>
+                            <td>Content 3</td>
+                        </tr>
+                        <tr>
+                            <td>Content 1</td>
+                            <td>Content 2</td>
+                            <td>Content 3</td>
+                        </tr>
+                        <tr>
+                            <td>Content 1</td>
+                            <td>Content 2</td>
+                            <td>Content 3</td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td>Testando foot</td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="intro section main-bg">
+        <div class="main-content intro-content">
+            <div class="intro-text-content">
+                <h2>Get in Touch</h2>
+                <p>
+                    We're here to help! If you have any questions, comments, or feedback, please don't hesitate to get in touch with us. Just fill out the form below, and we'll get back to you as soon as possible.
+                </p>
+            </div>
+            <div class="intro-img">
+                <img src="assets/img/contact.svg"
+                    alt="Mulher segurando um email e um telefone voando junto com um celular">
+            </div>
+            <div class="contact-form">
+                <fieldset class="form-grid">
+                    <legend>Contact Us</legend>
+                    <div class="form-group">
+                        <label for="first-name">First name</label>
+                        <input placeholder="Your first name" type="text" id="first-name" name="first-name">
+                    </div>
+                    <div class="form-group">
+                        <label for="last-name">Last name</label>
+                        <input placeholder="Your last name" type="text" id="last-name" name="last-name">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">E-mail</label>
+                        <input placeholder="Your E-mail" type="email" id="email" name="email">
+                    </div>
+                    <div class="form-group full-width">
+                        <label for="message">Message</label>
+                        <textarea placeholder="Your message" name="message" id="message" cols="30" rows="10"></textarea>
+                    </div>
+                    <div class="form-group full-width">
+                        <button type="submit">Send message</button>
+                    </div>
+                </fieldset>
+            </div>
+        </div>
+        
+    </section>
+
+    <footer id="footer" class=" footer white-bg">
+        <p><a target="_blank" href="https://github.com/Thiago87dev">Feito com <span class="heart">❤</span> por Thiago Alves</a></p>
+    </footer>
 </body>
 
 </html>
